--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -120,6 +120,7 @@ include/AllPix,
   include/Conclusions,
   include/appendix_ActiveEdgeSensors,
   include/appendix_Calibration,  
+  include/appendix_Telescope,  
 refs,
 }
 
@@ -247,6 +248,7 @@ refs,
 % Add your appendices here - don't forget to also add them to \includeonly above
 \include{include/appendix_ActiveEdgeSensors}
 \include{include/appendix_Calibration}
+\include{include/appendix_Telescope}
 \printbibliography[heading=subbibliography]
 
 %------------------------------------------------------------------------------
