[ThinSensors] plots vs. the bias voltage.

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -121,6 +121,7 @@ include/AllPix,
   include/appendix_ActiveEdgeSensors,
   include/appendix_Calibration,  
   include/appendix_Telescope,  
+  include/appendix_ThinSensors,  
 refs,
 }
 
@@ -249,6 +250,7 @@ refs,
 \include{include/appendix_ActiveEdgeSensors}
 \include{include/appendix_Calibration}
 \include{include/appendix_Telescope}
+\include{include/appendix_ThinSensors}
 \printbibliography[heading=subbibliography]
 
 %------------------------------------------------------------------------------
