[TestBeam] TestBeam: cluster size and residuals vs. thickness

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -58,6 +58,18 @@ root of the bias voltage.
 \subsection{Threshold scan}
 
 \subsection{Resolution vs. thickness}
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_vs_thickness.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_vs_thickness.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{Cluster size and residuals vs. thickness (run 2003 for 300 um thick sensor was taken at 70 V).}
+  \label{fig:clusize_residuals_vs_thickness}
+\end{figure}
 
 
 \subsection{Efficiency vs. thickness}
