--- a/include/appendix_ThinSensors.tex
+++ b/include/appendix_ThinSensors.tex
@@ -40,7 +40,7 @@
   \label{fig:depletionVoltage}
 \end{figure}
 
-
+\newpage
 %% --------------------------------------------- %%
 \section{Cluster size distribution}
 \subsection{Cluster size vs. bias voltage}
@@ -63,7 +63,7 @@
     \caption{55-GNDGR}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.33\textwidth}
-
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0005_E02.pdf}
     \caption{55-GND-GR-100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.33\textwidth}
@@ -77,7 +77,7 @@
   \caption{Cluster sizes vs. bias voltage.}
   \label{fig:clusterSize_vs_biasVoltage}
 \end{figure}
-
+\newpage
 %% --------------------------------------------- %%
 \section{Residuals}
 \subsection{Residuals vs. bias voltage}
@@ -100,7 +100,7 @@
     \caption{55-GNDGR}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.33\textwidth}
-
+    \includegraphics[width=\textwidth]{./figures/TestBeam/W5_E2_Residual_vs_bias.pdf}
     \caption{55-GND-GR-100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.33\textwidth}
@@ -115,7 +115,7 @@
   \label{fig:Residuals_vs_biasVoltage}
 \end{figure}
 
-
+\newpage
 
 
 
